# libmcp23017

./: .gitignore  Makefile.am  README.md  configure.ac  libmcp23017.pc.in
doc/: Makefile.am
lib/: Makefile.am  mcp23017.c  mcp23017.h
samples/: Makefile.am  mcp23017.c  mcp23017util.c
